Fix epsilon formula and add cluster bounds (#12)
* fix: correct epsilon formula and add cluster bounds to API response (#11)

Change epsilon from 360/2^zoom to 45/2^zoom (1/8th viewport width) so
locations don't over-cluster. Add MIN/MAX lat/lng bounds to clustering
SQL and populate BoundingBox on MarkerCluster responses.

Closes #11

* refactor: use static calculateEpsilon in tests instead of hardcoded formula (#11)

Make calculateEpsilon public static and update unit/integration tests
to call ClusteringService.calculateEpsilon() instead of duplicating
the 45.0/2^zoom formula.

* refactor: use getFirst() instead of get(0) in ClusteringServiceTest (#11)

---------

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>